--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -3,7 +3,7 @@
     <form class="grid-block form-horizontal">
 
         <div class="control-group">
-            <label class="control-label">{{i18n "Collaboration"}}</label>
+            <label class="control-label">{{_ "Collaboration"}}</label>
             <div class="controls">
                 {{>collaborationTagList show=true}}
 
@@ -12,16 +12,16 @@
 
 
       <div class="control-group">
-        <label class="control-label">{{i18n "Title"}}</label>
-        <div class="controls"><input id="title" type="text" value="" /><a href="#" class="get-title-link inline-link">{{i18n "Suggest title"}}</a></div>
+        <label class="control-label">{{_ "Title"}}</label>
+        <div class="controls"><input id="title" type="text" value="" /><a href="#" class="get-title-link inline-link">{{_ "Suggest title"}}</a></div>
       </div>
       <div class="control-group">
-        <label class="control-label">{{i18n "Body"}}</label>
+        <label class="control-label">{{_ "Body"}}</label>
         <div class="controls" id="editor"><textarea id="body" value="" class="input-xlarge"></textarea></div>
       </div>
 
         <div class="control-group">
-            <label class="control-label">{{i18n "URL"}}</label>
+            <label class="control-label">{{_ "URL"}}</label>
             <div class="controls"><input id="url" type="text" value="" /></div>
         </div>
 
@@ -29,7 +29,7 @@
 <!--
       {{#if categoriesEnabled}}
       <div class="control-group">
-        <label class="control-label">{{i18n "Category"}}</label>
+        <label class="control-label">{{_ "Category"}}</label>
         <div class="controls">
           {{#each categories}}
           <label class="radio inline">
@@ -44,13 +44,13 @@
       <!--
       {{#if isAdmin}}
         <div class="control-group">
-          <label class="control-label">{{i18n "Sticky?"}}</label>
+          <label class="control-label">{{_ "Sticky?"}}</label>
           <div class="controls">
             <input type="checkbox" name="sticky" id="sticky" />
           </div>
         </div>
         <div class="control-group">
-          <label class="control-label">{{i18n "User"}}</label>
+          <label class="control-label">{{_ "User"}}</label>
           <div class="controls">
             <select id="postUser">
               {{#each users}}
@@ -60,26 +60,26 @@
           </div>
         </div>
         <div class="control-group">
-          <label class="control-label">{{i18n "Status"}}</label>
+          <label class="control-label">{{_ "Status"}}</label>
           <div class="controls">
             <label class="radio inline">
-              <input id="status_pending" type="radio" value="1" name="status"/> {{i18n "Pending"}}
+              <input id="status_pending" type="radio" value="1" name="status"/> {{_ "Pending"}}
             </label>
             <label class="radio inline">
-              <input id="status_approved" type="radio" value="2" name="status" checked /> {{i18n "Approved"}}
+              <input id="status_approved" type="radio" value="2" name="status" checked /> {{_ "Approved"}}
             </label>
             <label class="radio inline">  
-              <input id="status_rejected" type="radio" value="3" name="status"/> {{i18n "Rejected"}}
+              <input id="status_rejected" type="radio" value="3" name="status"/> {{_ "Rejected"}}
             </label>
           </div>
         </div>
         <div id="postedAt" class={{showPostedAt}}>
           <div class="control-group">
-            <label class="control-label post-form-date">{{i18n "Posted Date"}}</label>
+            <label class="control-label post-form-date">{{_ "Posted Date"}}</label>
             <div class="controls"><input id="postedAtDate" type="text" value="{{postedAtDate}}" /></div>
           </div>
           <div class="control-group">
-            <label class="control-label post-form-time">{{i18n "Posted Time"}}</label>
+            <label class="control-label post-form-time">{{_ "Posted Time"}}</label>
             <div class="controls"><input id="postedAtTime" type="text" value="{{postedAtTime}}" /></div>
           </div>
           <p class="help-block">Leave blank to post at current time.</p>
@@ -87,7 +87,7 @@
       {{/if}}
       -->
       <div class="form-actions">
-        <input type="submit" class="button" value="{{i18n "Submit"}}" />
+        <input type="submit" class="button" value="{{_ "Submit"}}" />
       </div>
       {{> folder}} <!-- MedBook -->
     </form>
