--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.css
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.css
@@ -33,3 +33,14 @@
     width: 100%;
 }
 
+.cover{ 
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.4);
+    z-index:5;
+    width:100%; 
+    height:100%;
+    display: block;
+    z-index: 999;
+}
