--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -5,7 +5,7 @@
         <div class="control-group">
             <label class="control-label">{{_ "Collaboration"}}</label>
             <div class="controls">
-                {{>collaborationTagList show=true}}
+                {{>selectCollaborators}}
 
             </div>
         </div>
