--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -1,9 +1,11 @@
 <template name="collaborationTagList">
 
-  {{#each collaboration}}
-      <a href="{{collaborationLink}}" class="post-collaboration">{{collaborationName}}</a>
-  {{/each}}
-  <a class='addCollaborators'> <i class="fa fa-plus-square"  title="add collaboration"></i> </a>
+  <span class="collborationTagList">
+      {{#each collaboration}}
+          <a href="{{collaborationLink}}" class="post-collaboration">{{collaborationName}}</a>
+      {{/each}}
+      <a class='addCollaborators'> <i class="fa fa-plus-square"  title="add collaboration"></i> </a>
+  </span>
 
 </template>
 
