Migrating from filecollection to cfs

--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -89,7 +89,7 @@
       <div class="form-actions">
         <input type="submit" class="button" value="{{_ "Submit"}}" />
       </div>
-      {{> folder}} <!-- MedBook -->
+      <!-- {{> folder}} MedBook -->
     </form>
   </div>
 </template>
