--- a/client/views/posts/post_page.html
+++ b/client/views/posts/post_page.html
@@ -6,6 +6,13 @@
     {{#if body}}
       {{> UI.dynamic template=post_body}}
     {{/if}}
+    {{#if medbookfiles.length}}
+      medbookfiles
+      {{medbookfiles}}
+      {{> UI.dynamic template=files}}
+    {{else}}
+       No files
+    {{/if}}
     {{> UI.dynamic template=comment_form}}
     {{> UI.dynamic template=comment_list}}
   </div>
