Reverting to previous method of seeing posts.

--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -12,7 +12,7 @@
 <template name="collaborationGridElement">
   <a class="collaboration" href="/collaboration/{{slug}}">
     <div class="collaborationMarquee collaboration post">
-        <H2><a  href="/collaboration/{{slug}}">{{name}}</a></H2>
+        <H2><a  href="/collaboration/{{name}}">{{name}}</a></H2>
         <p>
         {{description}}
         </p>
