--- a/packages/telescope-collaboration/lib/client/views/collaboration_menu.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_menu.html
@@ -4,7 +4,8 @@
       <a class="collaboration dropdown-top-level" href="/">{{_ "Collaborations"}}</a>
       <div class="dropdown-menu">
         <ul role="menu" aria-labelledby="dLabel">
-            <li><a class="dropdown-sub-level" href="/collaboration/">All Collaborations</a></li>
+            <li><a class="dropdown-sub-level" href="/collaborationList/">List Collaborations</a></li>
+            <li><a class="dropdown-sub-level" href="/collaboration/">See all Posts from all Collaborations</a></li>
 
           {{# each collaboration}}
             <li><a class="dropdown-sub-level" href="{{collaborationLink}}">{{name}}</a></li>
