--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.css
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.css
@@ -11,8 +11,11 @@
 }
 
 .select2-choices {
+    /*
     list-style-type: none;
     padding-left: 4px !important;
+    */
+    border: 3px solid green !important;
     padding-top: 1px !important;
     padding-bottom: 1px !important;
     margin-top: 4px !important;
@@ -21,7 +24,9 @@
 
 .select2-search-choice {
     font-size: 14px;
+    /*
     padding-left: 4px !important;
+    */
     padding-top: 1px !important;
     padding-bottom: 1px !important;
     margin-top: 4px !important;
