--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -1,6 +1,6 @@
 <template name="collaborationGrid" xmlns="http://www.w3.org/1999/html">
   <h3 class="collaborationGridTitle">Browse Collaborations</h3>
-  {{> AddCollaboration}}
+  {{> EditOrAddCollaboration editOrAdd="Add"}}
   <div class="collaboration posts list">
     {{#each collaboration}}
       {{> collaborationGridElement}}
