Collaboration layout title and tuning

--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,6 +1,9 @@
 <template name="posts_list">
   {{> UI.dynamic template=postsListIncoming data=incoming}}
   <div class="posts-wrapper grid grid-module">
+    <div class="posts-title">
+        {{postsTitle}}
+    </div>
     <div class="posts list">
       {{#each posts}}
         {{> UI.dynamic template=post_item}}
