--- a/packages/telescope-collaboration/lib/client/views/collaboration.css
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.css
@@ -94,6 +94,9 @@
 
 .more-button {
   float:left;
+  margin-left:90px !important;
+  vertical-align: middle !important;        
+  line-height: 35px !important;
 }
 .footer {
   color:#e71e2f;
