--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -1,6 +1,6 @@
 <template name="collaborationGrid" xmlns="http://www.w3.org/1999/html">
   <h3 class="collaborationGridTitle">Browse Collaborations</h3>
-  {{> EditOrAddCollaboration editOrAdd="Add"}}
+  {{> collaborationAdd }}
   <div class="collaboration posts list">
     {{#each collaboration}}
       {{> collaborationGridElement}}
@@ -12,6 +12,8 @@
 <template name="collaborationGridElement">
   <a name="{{name}}" class="collaboration" href="/collaboration/{{name}}">
     <div class="collaborationMarquee collaboration post">
+        <a href="#" class="collabrationRemove" data-_id="{{_id}}" data-name="{{name}}"> <i class="fa fa-remove fa-1g" style="float:left"  title="Delete Collaboration"></i></a>
+        <a href="/collaboration-edit/{{name}}"> <i class="fa fa-edit fa-1g" style="float:right"  title="Edit Collaboration"></i></a>
         <H2><a  href="/collaboration/{{name}}">{{name}}</a></H2>
         <p>
         {{description}}
@@ -19,13 +21,6 @@
         <h3 class="collaboration-h3">Collaborators</h3> <div class="collaboration-token">{{collaborators}}</div>
 
         {{#if isAdministrator}}
-<!--
-            {{#if isPrivate}}
-                <button data-collaborationName="{{name}}" id="makePublic" type="button" class="btn btn-default btn-lg">Make Public</button>
-            {{else}}
-                <button data-collaborationName="{{name}}" id="makePrivate" type="button" class="btn btn-default btn-lg">Make Private</button>
-            {{/if}}
--->
             <b>Administrators</b> <div class="collaboration-token">{{administrators}}</div><br/>
             <b>Invitations</b> <div class="collaboration-token">{{invitations}}</div>
 
@@ -34,11 +29,7 @@
             <b>{{invitations}}</b>
             <br/>
             <b>Applications</b> <div class="collaboration-token">{{applications}}</div><br/>
-
         {{/if}}
-
-
-
 
         <h3 class="collaboration-h3">Membership</H3>
         {{#if isMember}}
