Improvements on the migration.

--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -12,7 +12,7 @@
 <template name="collaborationGridElement">
   <a name="{{name}}" class="collaboration" href="/collaboration/{{name}}">
     <div class="collaborationMarquee collaboration post">
-        <a href="#" class="collabrationRemove" data-_id="{{_id}}" data-name="{{name}}"> <i class="fa fa-remove fa-1g" style="float:left"  title="Delete Collaboration"></i></a>
+        <a href="#" class="collaborationRemove" data-_id="{{_id}}" data-name="{{name}}"> <i class="fa fa-remove fa-1g" style="float:left"  title="Delete Collaboration"></i></a>
         <a href="/collaboration-edit/{{name}}"> <i class="fa fa-edit fa-1g" style="float:right"  title="Edit Collaboration"></i></a>
         <H2><a  href="/collaboration/{{name}}">{{name}}</a></H2>
         <p>
