--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -1,8 +1,9 @@
 <template name="collaborationAdd">
     <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
         <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Add Collaboration</h3>
-        <div class="collapsed" style="display:none;">
+        <div class="collapsed " style="display:none;">
           {{> quickForm id="addCollaborationForm" collection="Collaboration" valudation="submit" type="insert" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
+         <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> cancel </button>
        </div>
     </div>
 </template>
@@ -10,6 +11,8 @@
 <template name="collaborationEdit">
    <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Edit Collaboration</h3>
    <div class="basicPanel">
+       <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
        {{> quickForm id="editCollaborationForm" collection="Collaboration" valudation="submit" doc=this type="update" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
+   <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
    </div>
 </template>
