Tuning collaboration editing

--- a/packages/telescope-collaboration/lib/client/views/collaboration.css
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.css
@@ -1,5 +1,13 @@
+.wordwrap { 
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */
+}
+
 .post-info {
-  padding: 2px !important;
+padding: 2px !important;
 }
 
 .collaboration > .controls > i{
