--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -18,20 +18,18 @@
         <p>
         {{description}}
         </p>
-        <h3 class="collaboration-h3">Collaborators</h3> <div class="collaboration-token">{{collaborators}}</div>
+        <b>Collaborators</b> <div class="collaboration-token">{{collaborators}}</div><br/>
 
         {{#if isAdministrator}}
-            <b>Administrators</b> <div class="collaboration-token">{{administrators}}</div><br/>
-            <b>Invitations</b> <div class="collaboration-token">{{invitations}}</div>
-
-
-
-            <b>{{invitations}}</b>
-            <br/>
-            <b>Applications</b> <div class="collaboration-token">{{applications}}</div><br/>
+            <b>Administrators</b> <div class="collaboration-token wordwrap">{{administrators}}</div><br/>
+            {{#if invitations}}
+                <b>Invitations</b> <div class="collaboration-token wordwrap">{{invitations}}</div><br/>
+            {{/if}}
+            {{#if applications}}
+                <b>Applications</b> <div class="collaboration-token wordwrap">{{applications}}</div><br/>
+            {{/if}}
         {{/if}}
 
-        <h3 class="collaboration-h3">Membership</H3>
         {{#if isMember}}
             <button data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn btn-default btn-lg">Leave this collaboration</button>
         {{else}}
