--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -2,17 +2,43 @@
     <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
         <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Add Collaboration</h3>
         <div class="collapsed " style="display:none;">
-          {{> quickForm id="addCollaborationForm" collection="Collaboration" valudation="submit" type="insert" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
-         <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> cancel </button>
+          {{#autoForm id="addCollaboration" collection="Collaboration" valudation="submit" type="insert" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration}}
+              <fieldset>
+              {{> afQuickField name="name"}}
+              {{> afQuickField name="description"}}
+              {{> bump name="collaborators" }}
+              {{> bump name="administrators"}}
+              {{> bump name="invitations"   }}
+              <button type="submit" class="btn btn-primary"> Submit </button>
+              <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
+              </fieldset>
+          {{/autoForm}}
+          
        </div>
     </div>
+</template>
+
+<template name="bump">
+  <div class="panel panel-default">
+    {{#with afFieldLabelText name=name}}
+    <div class="panel-heading">
+      <h3 class="panel-title">{{this}}</h3>
+    </div>
+    {{/with}}
+    <div class="panel-body">
+      {{#if afFieldIsInvalid name=name}}
+      <span class="help-block">{{{afFieldMessage name=name}}}</span>
+      {{/if}}
+      {{> afFieldInput name=name class="collaboratorListClass"}}
+    </div>
+  </div>
 </template>
 
 <template name="collaborationEdit">
    <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Edit Collaboration</h3>
    <div class="basicPanel">
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
-       {{> quickForm id="editCollaborationForm" collection="Collaboration" valudation="submit" doc=this type="update" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
+       {{> quickForm id="editCollaboration" collection="Collaboration" valudation="submit" doc=this type="update" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
    <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
    </div>
 </template>
