--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -1,19 +1,35 @@
+<template name="collaborationForm">
+  {{#autoForm id="addCollaboration" doc=doc collection="Collaboration" validation="submit" type=type fields="isPublic,name,description,collaborators,requiresAdministratorApprovalToJoin,administrators,invitations" schema=Schemas.collaboration}}
+      <fieldset>
+      {{> afQuickField name="isPublic" label-style="display:none;" type="boolean-radios" trueLabel="Posts are public to all" 
+           value=isPublic
+           falseLabel="Posts are private to collaborators"}}
+
+      {{> afQuickField name="name"}}
+      {{> afQuickField name="description"}}
+      {{> bump name="collaborators" }}
+      {{> bump name="administrators"}}
+
+      {{> afQuickField name="requiresAdministratorApprovalToJoin" label-style="display:none;" type="boolean-radios" 
+           value=requiresAdministratorApprovalToJoin
+           trueLabel="Users may add themselves" 
+           falseLabel="Users require administrator approval"}}
+      {{> bump name="invitations"   }}
+
+      <button type="submit" class="btn btn-primary"> Submit </button>
+      <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
+      {{#if doc}}
+          <button data-_id={{doc._id}} data-name={{doc.name}} type="button" class="removeCollaboration btn btn-primary" style="background-color:red!important;"> Delete Collaboration </button>
+      {{/if}}
+      </fieldset>
+  {{/autoForm}}
+</template>
+
 <template name="collaborationAdd">
     <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
         <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Add Collaboration</h3>
         <div class="collapsed " style="display:none;">
-          {{#autoForm id="addCollaboration" collection="Collaboration" valudation="submit" type="insert" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration}}
-              <fieldset>
-              {{> afQuickField name="name"}}
-              {{> afQuickField name="description"}}
-              {{> bump name="collaborators" }}
-              {{> bump name="administrators"}}
-              {{> bump name="invitations"   }}
-              <button type="submit" class="btn btn-primary"> Submit </button>
-              <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
-              </fieldset>
-          {{/autoForm}}
-          
+            {{>collaborationForm type="insert"}}
        </div>
     </div>
 </template>
@@ -37,8 +53,14 @@
 <template name="collaborationEdit">
    <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Edit Collaboration</h3>
    <div class="basicPanel">
+   {{>collaborationForm doc=this type="update"}}
+
+   <!--
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
-       {{> quickForm id="editCollaboration" collection="Collaboration" valudation="submit" doc=this type="update" fields="name,description,collaborators,administrators,invitations" schema=Schemas.collaboration }}
-   <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
+       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
+            fields="isPublic, name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
+       <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
+       <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
+   -->
    </div>
 </template>
