--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -12,7 +12,9 @@
 <template name="collaborationGridElement">
   <a name="{{name}}" class="collaboration" href="/collaboration/{{name}}">
     <div class="collaborationMarquee collaboration post">
-        <a class="controls" href="/collaboration-edit/{{name}}"> <i class="fa fa-edit fa-1g" style="float:right"  title="Edit Collaboration"></i></a>
+        {{#if isAdministrator}}
+            <a class="controls" href="/collaboration-edit/{{name}}"> <i class="fa fa-edit fa-1g" style="float:right"  title="Edit Collaboration"></i></a>
+        {{/if}}
         <H2><a  href="/collaboration/{{name}}">{{name}}</a></H2>
 
             {{#if isPublic}}
