--- a/client/views/users/user_edit.html
+++ b/client/views/users/user_edit.html
@@ -33,6 +33,14 @@
           <input name="email" type="text" value="{{userEmail}}" />
         </div>
       </div>
+
+      <div class="control-group">
+        <label>{{_ "defaultCollaboration"}}</label>
+        <div class="controls">
+          <input name="defaultCollaboration" type="text" value="{{profile.defaultCollaboration}}" />
+        </div>
+      </div>
+
       <div class="control-group">
         <label>{{_ "bio"}}</label>
         <div class="controls"><textarea name="bio" type="text">{{profile.bio}}</textarea></div>
