Put back CollaborationList

--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -4,9 +4,7 @@
       {{#each collaboration}}
           <a href="{{collaborationLink}}" class="post-collaboration">{{collaborationName}}</a>
       {{/each}}
-      <!--
-          <a class='addCollaborators'> <i class="fa fa-plus-square"  title="add collaboration"></i> </a>
-      -->
+          <a class='addCollaborators'> <small><i class="fa fa-plus-square fa-1"  title="add collaboration"></i></small> </a>
   </span>
 
 </template>
