--- a/client/views/posts/modules/post_title.html
+++ b/client/views/posts/modules/post_title.html
@@ -1,3 +1,4 @@
 <template name="postTitle">
   <a href="{{postLink}}" class="post-title" target="{{postTarget}}">{{title}}</a>
+  {{>collaborationTagList}}
 </template>
