Progress on approval, not finished yet.

--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -20,8 +20,8 @@
 
       {{> afQuickField name="requiresAdministratorApprovalToJoin" label-style="display:none;" type="boolean-radios" 
            value=requiresAdministratorApprovalToJoin
-           trueLabel="Users may add themselves" 
-           falseLabel="Users require administrator approval"}}
+           falseLabel="Users may add themselves" 
+           trueLabel="Users require administrator approval"}}
 
       {{> bump name="invitations"  class="collaboratorListClass"   }}
 
@@ -52,7 +52,7 @@
     {{/with}}
     <div class="panel-body">
       {{#if afFieldIsInvalid name=name}}
-      <span class="help-block">{{{afFieldMessage name=name}}}</span>
+          <span class="help-block">{{afFieldMessage name=name}}</span>
       {{/if}}
       {{> afFieldInput name=name class=class}}
     </div>
@@ -65,6 +65,37 @@
    {{>collaborationForm doc=this type="update"}}
 
    <!--
+       <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
+       {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
+            fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
+       <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
+       <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
+   -->
+   </div>
+</template>
+
+<template name="collaborationReview">
+   <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >
+   The following individuals would like to join {{name}} 
+   Collaboration</h3>
+   <div class="basicPanel">
+   <form>
+   <table>
+    {{#each requests}}
+    <tr>
+        <th> {{this}} </th>
+        <th> <label class="radio-inline"><input type="radio" class="underReview" name="{{this}}" checked>Under review</label> </th> 
+        <th> <label class="radio-inline"><input type="radio" class="notApproved" name="{{this}}">Not Appoved</label> </th> 
+        <th> <label class="radio-inline"><input type="radio" class="approved" name="{{this}}">Approved</label> </th>
+    </tr>
+    {{/each }}
+   </table>
+       <button type="button" class="btn btn-primary cancelAndGoCollaborationList" style="background-color:red;" > cancel </button>
+       <button type="button" class="btn btn-primary reviewCollaboration" style="background-color:green;" > done </button>
+   </form>
+   <!--
+   {{>collaborationForm doc=this type="update"}}
+
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
        {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
             fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
