--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -18,14 +18,26 @@
         <H2><a  href="/collaboration/{{name}}">{{name}}</a></H2>
 
             {{#if requiresAdministratorApprovalToJoin}}
-            <h6>Users may add themselves</h6>
-            {{else}}
             <h6>Users require administrator approval</h6>
+            {{else}}
+            <h6>Users may add themselves</h6>
             {{/if}}
 
         <p>
         {{description}}
         </p>
+
+        <center>
+        {{#if isMember}}
+            <button data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn btn-default btn-lg">Leave this collaboration</button>
+        {{else}}
+            {{#if requiresAdministratorApprovalToJoin}}
+                <button data-collaborationName="{{name}}" id="apply" name="apply" type="button" class="btn btn-default btn-lg">Apply for membership</button>
+            {{else}}
+                <button data-collaborationName="{{name}}" id="join" name="join" type="button" class="btn btn-default btn-lg">Join this collaboration</button>
+            {{/if}}
+        {{/if}}
+        </center>
 
         {{#if isUnlisted}}
         <h6>Collaboration is unlisted and only the collaborators and administrators can see it.</h6>
@@ -40,20 +52,17 @@
             {{#if invitations}}
                 <b>Invitations</b> <div class="collaboration-token wordwrap">{{invitations}}</div><br/>
             {{/if}}
-            {{#if applications}}
-                <b>Applications</b> <div class="collaboration-token wordwrap">{{applications}}</div><br/>
+            {{#if requests}}
+            <center>
+                <a href="/collaboration-review/{{name}}" data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn">
+                    Review {{requests.length}} requests
+                </a>
+            </center>
+            {{else}}
+                no requests
             {{/if}}
         {{/if}}
 
-        {{#if isMember}}
-            <button data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn btn-default btn-lg">Leave this collaboration</button>
-        {{else}}
-            {{#if requiresApproval}}
-                <button data-collaborationName="{{name}}" id="apply" name="apply" type="button" class="btn btn-default btn-lg">Apply for membership</button>
-            {{else}}
-                <button data-collaborationName="{{name}}" id="join" name="join" type="button" class="btn btn-default btn-lg">Join this collaboration</button>
-            {{/if}}
-        {{/if}}
 
     </div>
   </a>
