--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.html
@@ -5,7 +5,7 @@
           <a href="{{collaborationLink}}" class="post-collaboration">{{collaborationName}}</a>
       {{/each}}
       <span class="collaborationTagListEditor">
-          <a class='addCollaborators'> <small><i class="fa fa-pencil fa-1"  title="add collaboration"></i></small> </a>
+          <a class='addCollaborators'> <small><i class="fa fa-tags fa-1"  title="add collaboration"></i></small> </a>
       </span>
   </span>
 
