--- a/packages/telescope-collaboration/lib/client/views/post_collaboration.css
+++ b/packages/telescope-collaboration/lib/client/views/post_collaboration.css
@@ -5,13 +5,24 @@
 .post-collaborations {
     text-align: right; }
 
+.post {
+    margin: 8px;
+}
+
+.post:hover {
+    border-radius: 10px;
+    border: 1px solid rgba(180,180,180,0.5);;
+    box-shadow:rgba(0,0,0,0.5) 0px 0px 6px; border-radius:12px;
+}
+
 .post-collaboration {
     display: inline-block;
     font-size: 11px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    background: lightgreen;
+    background: cornsilk;
+    opacity: 0.5;
     padding: 0px 6px;
     text-transform: uppercase;
     font-weight: normal;
