--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -1,5 +1,5 @@
 <template name="post_item">
-  <a href="{{postLink}}" class="post-title" target="{{postTarget}}">
+  <a href="{{postLink}}" class="post-title post_item" target="{{postTarget}}">
   <div class="post vvv {{rankClass}} {{#if sticky}}sticky{{/if}} {{inactiveClass}}" id="{{_id}}">
     <div class="modules-group left-modules">
       <div class="inner">
