Various aesthetic changes.

--- a/client/views/posts/modules/post_title.html
+++ b/client/views/posts/modules/post_title.html
@@ -1,4 +1,8 @@
 <template name="postTitle">
-  <a href="{{postLink}}" class="post-title" target="{{postTarget}}">{{title}}</a>
+   <div class="postTitle" >
+    <a href="{{postLink}}" target="{{postTarget}}">{{title}}</a>
+    <br>
+   </div>
   {{>collaborationTagList}}
+
 </template>
