--- a/client/views/posts/modules/post_domain.html
+++ b/client/views/posts/modules/post_domain.html
@@ -1,3 +1,3 @@
 <template name="postDomain">
-  {{#if url}}<span class="post-domain">{{domain}}</span>{{/if}}
+  {{#if url}}<span class="post-domain"><a href="{{url}}" target="_blank">{{domain}}</a></span>{{/if}}
 </template>
