--- a/client/views/posts/modules/post_title.html
+++ b/client/views/posts/modules/post_title.html
@@ -1,6 +1,6 @@
 <template name="postTitle">
-   <div class="postTitle" >
-    <a href="{{postLink}}" target="{{postTarget}}">{{title}}</a>
+   <div>
+    <a  class="postTitle" href="{{postLink}}" target="{{postTarget}}">{{title}}</a>
     <br>
    </div>
   {{>collaborationTagList}}
