--- a/packages/telescope-collaboration/client/views/posts/post_submit.html
+++ b/packages/telescope-collaboration/client/views/posts/post_submit.html
@@ -86,7 +86,7 @@
         </div>
       {{/if}}
       -->
-      {{>files}}
+      {{>postedFiles}}
       <div class="form-actions">
         <input type="submit" class="button" value="{{_ "Submit"}}" />
       </div>
