--- a/packages/telescope-collaboration/lib/client/views/collaboration.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration.html
@@ -29,7 +29,18 @@
 
         <center>
         {{#if isMember}}
-            <button data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn btn-default btn-lg">Leave this collaboration</button>
+            {{#if memberBecause}}
+               <h6 style="text-align: left !important;">
+               You are a member of these collaborations which are members of this collaboration:
+                {{#each memberBecause}}
+                <li>
+                    {{this}}
+                </li>
+                {{/each}}
+               </h6>
+            {{else}}
+                <button data-collaborationName="{{name}}" id="leave" name="leave" type="button" class="btn btn-default btn-lg">Leave this collaboration</button>
+            {{/if}}
         {{else}}
             {{#if requiresAdministratorApprovalToJoin}}
                 <button data-collaborationName="{{name}}" id="apply" name="apply" type="button" class="btn btn-default btn-lg">Apply for membership</button>
