--- a/packages/telescope-collaboration/lib/client/views/collaboration_item.html
+++ b/packages/telescope-collaboration/lib/client/views/collaboration_item.html
@@ -26,7 +26,7 @@
       {{> bump name="invitations"  class="collaboratorListClass"   }}
 
       <button type="submit" class="btn btn-primary"> Submit </button>
-      <button type="button" class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
+      <button type="button" onclick='$(".collapsed").hide()' class="cancelAndGoCollaborationList btn btn-primary"> Cancel </button>
       {{#if doc}}
           <button data-_id={{doc._id}} data-name={{doc.name}} type="button" class="removeCollaboration btn btn-primary" style="background-color:red!important;"> Delete Collaboration </button>
       {{/if}}
@@ -36,7 +36,7 @@
 
 <template name="collaborationAdd">
     <div onclick='$(".collapsed").show()' class="collaboration-item" style="cursor:pointer;">
-        <h3 class="short" style="color:white;text-align:center; margin:10px; padding:0; font-size:26px;" >Add Collaboration</h3>
+        <h3 class="short" style="color:white;text-align:center; margin:5px; padding:0; font-size:26px;" >Add Collaboration</h3>
         <div class="collapsed " style="display:none;">
             {{>collaborationForm type="insert"}}
        </div>
@@ -68,7 +68,7 @@
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
        {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
             fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
-       <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
+       <button type="button"   onclick='$(".collapsed").hide()' class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
        <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
    -->
    </div>
@@ -90,7 +90,7 @@
     </tr>
     {{/each }}
    </table>
-       <button type="button" class="btn btn-primary cancelAndGoCollaborationList" style="background-color:red;" > cancel </button>
+       <button type="button"  onclick='$(".collapsed").hide()' class="btn btn-primary cancelAndGoCollaborationList" style="background-color:red;" > cancel </button>
        <button type="button" class="btn btn-primary reviewCollaboration" style="background-color:green;" > done </button>
    </form>
    <!--
@@ -99,7 +99,7 @@
        <a class='cancelAndGoCollaborationList' style="float:right"> <i class="fa fa-remove"  title="Cancel collaboration"></i> </a>
        {{> quickForm id="editCollaboration" collection="Collaboration" validation="submit" doc=this type="update" 
             fields="name,description,collaborators,administrators,requiresAdministratorApprovalToJoin,invitations" schema=Schemas.collaboration }}
-       <button type="button" class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
+       <button type="button" onclick='$(".collapsed").hide()'  class="btn btn-primary cancelAndGoCollaborationList"> cancel </button>
        <button type="button" class="btn btn-primary removeCollaboration"> Remove </button>
    -->
    </div>
