--- a/packages/telescope-post-files/client/views/files/files.html
+++ b/packages/telescope-post-files/client/views/files/files.html
@@ -37,6 +37,7 @@
   <div class="fileArea">
   {{#each uploadedFiles}}
       {{> uploadedFile}}
+      {{> FS.UploadProgressBar}}
       <hr>
   {{/each}}
   </div>
